# OpenCamera

./: .gitignore  BUILDING.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Main.md  README.md  USAGE.md  build_server.ps1  build_vcam.ps1  fixes.md  implementation_plan.md  install_vcam.ps1  refixtofps.json  session_context.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
mobile_app/: README.md  pubspec.yaml
mobile_app/android/app/: build.gradle.kts
mobile_app/android/app/src/main/: AndroidManifest.xml
mobile_app/android/app/src/main/kotlin/com/feer/cameralibre/camera_libre/: H264EncoderPlugin.kt  H264StreamingEngine.kt  MainActivity.kt
mobile_app/lib/: main.dart
mobile_app/lib/services/: camera_service.dart  h264_encoder.dart
mobile_app/test/: widget_test.dart
pc_server/: CMakeLists.txt
pc_server/src/: config.hpp  frame_receiver.cpp  frame_receiver.hpp  h264_decoder.cpp  h264_decoder.hpp  jpeg_viewer.cpp  jpeg_viewer.hpp  main.cpp  tcp_server.cpp  tcp_server.hpp
scratch/: force_reinstall.ps1  reinstall_vcam.ps1
scratch/tmhare-vcam/: directshow.props
vcam_filter/: CMakeLists.txt
vcam_filter/BaseClasses/: dllentry.cpp  refclock.h  streams.h  wxdebug.cpp
vcam_filter/src/: CameraLibreFilter.cpp  CameraLibreFilter.h  CameraLibreStream.cpp  CameraLibreStream.h  CameraLibreVCam.def  DllSetup.cpp
